# BlazinglySAC

./: .gitignore  Cargo.toml
migrations/: 20240924191632_council.sql  20240924192117_club.sql  20240924192614_thread.sql  20240924192802_auth.sql  20240924192902_profile.sql  20240924193008_comment.sql  20240924193155_announcement.sql  20240924194707_event.sql  20240925193659_membership.sql  20240927211030_upload.sql  20240929175920_thread_likes.sql  20240929180026_comment_likes.sql  20240930102220_announcement_media.sql  20240930102224_thread_media.sql  20240930102233_event_media.sql  20241010194445_admin.sql  20241220093700_transportation.sql  20241226152252_club_application.sql  20250114185349_club_phones.sql  20250114192445_add_club_media_column.sql  20250115195631_create_website_grievances.sql  20250413130458_alter_profile.sql
src/: announcements.rs  auth.rs  club.rs  council.rs  events.rs  file_uploads.rs  grievance.rs  main.rs  models.rs  thread_comment.rs  transportation.rs  validation.rs  views.rs
