[package]
name = "blazinglySAC"
version = "0.1.0"
edition = "2021"



[dependencies]
axum = { version = "0.7.6", features=["multipart"]}
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header"] }
dotenvy = "0.15.7"
local-ip-address = "0.6.1"
tower-http = { version = "0.5.2", features = ["compression-br", "compression-gzip", "trace"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
jsonwebtoken = "9.3.0"
serde_json = "1.0.128"
bcrypt = "0.15.1"
blake3 = "1.5.4"
image = "0.25.2"
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
